# repository-hygiene

./: .gitignore  README.md  auditoria.txt  auditoria.yaml  pyproject.toml
.github/workflows/: audit-reusable.yml  repository-hygiene.yml
.opencode/commands/: hygiene.md
.opencode/skills/agent-hygiene-flow/: SKILL.md
openspec/: config.yaml
openspec/changes/agent-audit-report/: design.md  proposal.md  tasks.md
openspec/changes/agent-audit-report/specs/agent-friendly-audit-report/: spec.md
openspec/changes/archive/2026-07-22-agent-audit-report/: .openspec.yaml  README.md  tasks.md
openspec/changes/archive/2026-07-22-clarify-readme-workflow/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-22-clarify-readme-workflow/specs/documentation-consistency/: spec.md
openspec/changes/archive/2026-07-22-optimize-audit-performance/: tasks.md
openspec/changes/archive/2026-07-22-publish-pypi-v020/: proposal.md  tasks.md
openspec/changes/archive/2026-07-22-reduce-audit-false-positives/specs/context-aware-audit-findings/: spec.md
openspec/changes/archive/agent-hygiene-skill/: design.md  proposal.md  tasks.md
openspec/changes/archive/agent-hygiene-skill/specs/agent-hygiene-flow/: spec.md
openspec/changes/distribuir-auditoria-higiene/: README.md  design.md  proposal.md  tasks.md
openspec/changes/distribuir-auditoria-higiene/specs/atualizacao-auditoria/: spec.md
openspec/changes/distribuir-auditoria-higiene/specs/instalacao-repositorio/: spec.md
openspec/changes/distribuir-auditoria-higiene/specs/pacote-auditoria-higiene/: spec.md
openspec/changes/distribuir-auditoria-higiene/specs/workflow-auditoria-reutilizavel/: spec.md
openspec/changes/documentar-geracao-relatorios/: design.md  proposal.md  tasks.md
openspec/changes/documentar-geracao-relatorios/specs/audit-report-documentation/: spec.md
openspec/changes/optimize-audit-performance/: design.md  proposal.md  tasks.md
openspec/changes/optimize-audit-performance/specs/scalable-audit/: spec.md
openspec/changes/publish-pypi-v020/: design.md  tasks.md
openspec/changes/publish-pypi-v020/specs/publish-pypi-v020/: spec.md
openspec/changes/reduce-audit-false-positives/: design.md  proposal.md  tasks.md
openspec/specs/agent-friendly-audit-report/: spec.md
openspec/specs/atualizacao-auditoria/: spec.md
openspec/specs/context-aware-audit-findings/: spec.md
openspec/specs/documentation-consistency/: spec.md
openspec/specs/instalacao-repositorio/: spec.md
openspec/specs/pacote-auditoria-higiene/: spec.md
openspec/specs/publish-pypi-v020/: spec.md
openspec/specs/scalable-audit/: spec.md
openspec/specs/workflow-auditoria-reutilizavel/: spec.md
src/auditoria_higiene/: __init__.py  cli.py  core.py  init.py  reporters.py  snapshot.py
src/auditoria_higiene/templates/: auditoria.yaml  pre-commit  workflow.yml
src/repository_hygiene/: cli.py  core.py  init.py  reporters.py  sanitizer.py
src/repository_hygiene/templates/: audit-reusable.yml  auditoria.yaml  workflow.yml
tests_package/: test_auditoria_package.py
