[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "repository-hygiene"
version = "0.2.0"
description = "Repository hygiene auditor for Git repositories"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["audit", "hygiene", "repository", "github-actions"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/frederico-mello/repository-hygiene"
Source = "https://github.com/frederico-mello/repository-hygiene"

[project.scripts]
repository-hygiene = "auditoria_higiene.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
auditoria_higiene = ["templates/*"]

[tool.pytest.ini_options]
testpaths = ["tests_package", "tests"]
python_files = ["test_*.py"]
